getting firebase started

--- a/public/index.html
+++ b/public/index.html
@@ -28,4 +28,16 @@
       To create a production bundle, use `npm run build`.
     -->
   </body>
+  <script src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDEHPO8lkpiN1b7mBgwslw8IXBxBXP45Lw",
+      authDomain: "twitter-clone-fe547.firebaseapp.com",
+      databaseURL: "https://twitter-clone-fe547.firebaseio.com",
+      storageBucket: "twitter-clone-fe547.appspot.com",
+      messagingSenderId: "170175318393"
+    };
+    firebase.initializeApp(config);
+  </script>
 </html>
